--- a/package.json
+++ b/package.json
@@ -3,22 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "roots": "pnpm next-roots",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "13.3.4",
+    "next-roots": "3.0.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
     "@types/node": "18.16.3",
     "@types/react": "18.2.2",
     "@types/react-dom": "18.2.3",
     "autoprefixer": "10.4.14",
+    "esbuild": "0.17.18",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
-    "next": "13.3.4",
-    "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "postcss": "8.4.21",
+    "prettier": "2.8.4",
+    "standard": "17.0.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   }
