--- a/package.json
+++ b/package.json
@@ -1,35 +1,57 @@
 {
   "name": "nextjs-multipage-multilanguage-example",
-  "version": "0.1.0",
+  "version": "2.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "remove-dirs": "pnpm run remove-dot-next-dir && pnpm run remove-app",
+    "remove-app": "shx rm -rf app",
+    "remove-dot-next-dir": "shx rm -rf \".next\"",
+    "roots": "pnpm run remove-dirs && pnpm next-roots",
+    "preinstall": "npx only-allow pnpm",
+    "dev": "pnpm next-roots && next dev --hostname 0.0.0.0",
+    "dev-clean": "pnpm run roots && next dev --hostname 0.0.0.0",
+    "prod": "pnpm run build",
+    "build": "pnpm run roots && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "eslint": "eslint './src/**/*.{js,jsx,ts,tsx}' --quiet"
   },
   "dependencies": {
-    "@headlessui/react": "1.7.8",
-    "@heroicons/react": "2.0.17",
-    "clsx": "1.2.1",
-    "next": "13.5.1",
-    "next-roots": "3.0.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "server-only": "0.0.1"
+    "@headlessui/react": "^2.0.4",
+    "next": "^14.2.3",
+    "next-roots": "^3.7.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "server-only": "^0.0.1"
   },
   "devDependencies": {
-    "@types/node": "18.16.3",
-    "@types/react": "18.2.2",
-    "@types/react-dom": "18.2.3",
-    "autoprefixer": "10.4.14",
-    "esbuild": "0.17.18",
-    "eslint": "8.39.0",
-    "eslint-config-next": "13.3.4",
-    "postcss": "8.4.31",
-    "prettier": "2.8.4",
-    "standard": "17.0.0",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "@next/bundle-analyzer": "^14.2.3",
+    "@types/node": "20.14.2",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.7.0",
+    "@typescript-eslint/parser": "^7.7.0",
+    "autoprefixer": "^10.4.19",
+    "clsx": "^2.1.1",
+    "esbuild": "^0.21.4",
+    "esbuild-node-externals": "^1.13.1",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-plugin-boundaries": "^4.2.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-simple-import-sort": "^12.0.0",
+    "eslint-plugin-tailwindcss": "^3.15.1",
+    "eslint-plugin-unused-imports": "^3.1.0",
+    "postcss": "^8.4.38",
+    "postcss-import": "^16.1.0",
+    "prettier": "^3.3.0",
+    "prettier-plugin-tailwindcss": "^0.6.1",
+    "shx": "^0.3.4",
+    "standard": "^17.1.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.5"
   }
 }
